fix(home.css): resolve color text on mobile

--- a/home-css/home.css
+++ b/home-css/home.css
@@ -6,6 +6,7 @@ body {
   justify-content: center;
   margin: 0;
   transition: opacity .5s;
+  color: #f5f5f5;
 }
 .transition-page{
     opacity: 0;
@@ -32,6 +33,7 @@ main {
   max-width: fit-content;
   transition: all 0.4s;
   font-weight: bold;
+  color: var(--text-color);
 }
 .home-button:hover {
   background-color: #0ca80a;
@@ -102,6 +104,7 @@ main {
   font-weight: 600;
   font-size: 0.875em;
   transition: all 0.4s;
+  color: var(--text-color);
 }
 .icon-category {
 }
